added all functions and event listeners used to maniuplate DOM

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div class="container">
         <div class="screen">
-            <p class="top-text"></p>
-            <p class="bot-text"></p>
+            <p id="top-text" class="top-text"></p>
+            <p id="bot-text" class="bot-text"></p>
         </div>
         <div class="buttons-div">
             <div class="btn-row">
