added favicon and link to github

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="C.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,8 +49,9 @@
                 <button class="equals" id="equals">=</button>
             </div>
         </div>
-        
     </div>
+
+    <a class="git-link" href="https://github.com/coolleighton">By Leighton Coughlin | See other projects here</a>
 
     <script src="script.js"></script>
 </body>
